--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="This Way Of Life | Rising from the ashes of the 19801s Mod culture comes a modern-day story of five undying friendships stained by gangland violence, loss and bloody revenge..."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>This Way Of Life</title>
+    <title>Mod Film | This Way Of Life</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
